--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": ["Person", "MusicGroup"],
-  "name": "Pedro Henrique Cordeiro Pavão",
-  "alternateName": "Pedrem",
-  "description": "Pedro Henrique Cordeiro Pavão (São Miguel, Açores, 8 de agosto de 1996), conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
-  "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_tC3P2QgCyt0ptpcWHGEP_ZQieNCkD2Tr9YztOeQOpQI9V9OdPcCvkWcZLGcUGe9I8M8KlJZ0ePVUkNyLh0nVURor1jVeaPYcCSZdUDAYXvOryXHC6gigrw8T2amB8KbMOdV_dXgYxG3GECh81jOoUFkAnyf-JAwsspAu-HBX3raTEYiQUF5aaXF4Pw/w400-h394/Pedrem-artista-musical-a%C3%A7ores%208.png",
-  "birthDate": "1996-08-08",
-  "birthPlace": {
-    "@type": "Place",
-    "name": "São Miguel, Açores, Portugal"
-  },
-  "jobTitle": "Artista musical",
-  "url": "https://sites.google.com/view/pedrem",
-  "sameAs": [
-    "https://www.youtube.com/@pedremmusic",
-    "https://www.tiktok.com/@pedrem",
-    "https://www.instagram.com/xpedremx",
-    "https://www.facebook.com/djpedrem",
-    "https://www.linkedin.com/in/xpedremx",
-    "https://open.spotify.com/intl-pt/artist/7iHL44rn4M9576JKqSBldB",
-    "https://music.apple.com/pt/artist/pedrem/1500315628",
-    "https://www.imdb.com/name/nm14289853/",
-    "https://x.com/xpedremx",
-    "https://www.deezer.com/pt/artist/12754911",
-    "https://www.shazam.com/artist/pedrem/1500315628",
-    "https://www.cifraclub.com.br/pedrem/",
-    "https://genius.com/artists/Pedrem",
-    "https://www.letras.com/pedrem/",
-    "https://www.flickr.com/people/pedrem/"
-  ],
-  "mainEntityOfPage": "https://sites.google.com/view/pedrem"
-}
-</script>
+<head>
+  <meta charset="UTF-8">
+  <title>Pedrem</title>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": ["Person", "MusicGroup"],
+    "name": "Pedro Henrique Cordeiro Pavão",
+    "alternateName": "Pedrem",
+    "description": "Pedro Henrique Cordeiro Pavão (São Miguel, Açores, 8 de agosto de 1996), conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
+    "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_tC3P2QgCyt0ptpcWHGEP_ZQieNCkD2Tr9YztOeQOpQI9V9OdPcCvkWcZLGcUGe9I8M8KlJZ0ePVUkNyLh0nVURor1jVeaPYcCSZdUDAYXvOryXHC6gigrw8T2amB8KbMOdV_dXgYxG3GECh81jOoUFkAnyf-JAwsspAu-HBX3raTEYiQUF5aaXF4Pw/w400-h394/Pedrem-artista-musical-a%C3%A7ores%208.png",
+    "birthDate": "1996-08-08",
+    "birthPlace": { "@type": "Place", "name": "São Miguel, Açores, Portugal" },
+    "jobTitle": "Artista musical",
+    "url": "https://sites.google.com/view/pedrem",
+    "sameAs": [
+      "https://www.youtube.com/@pedremmusic",
+      "https://www.tiktok.com/@pedrem",
+      "https://www.instagram.com/xpedremx",
+      "https://www.facebook.com/djpedrem",
+      "https://www.linkedin.com/in/xpedremx",
+      "https://open.spotify.com/intl-pt/artist/7iHL44rn4M9576JKqSBldB",
+      "https://music.apple.com/pt/artist/pedrem/1500315628",
+      "https://www.imdb.com/name/nm14289853/",
+      "https://x.com/xpedremx",
+      "https://www.deezer.com/pt/artist/12754911",
+      "https://www.shazam.com/artist/pedrem/1500315628",
+      "https://www.cifraclub.com.br/pedrem/",
+      "https://genius.com/artists/Pedrem",
+      "https://www.letras.com/pedrem/",
+      "https://www.flickr.com/people/pedrem/"
+    ],
+    "mainEntityOfPage": "https://sites.google.com/view/pedrem"
+  }
+  </script>
+</head>
