--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Pedrem</title>
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google881f308692600ead">
+
+  <!-- JSON-LD para Google SEO -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
