--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Pedrem</title>
 
   <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="google881f308692600ead">
+  <meta name="google-site-verification" content="lsMLunpggY2OEyspde_I8HGlb3Dl-5ASKKxWs99ehK4" />
 
   <!-- JSON-LD para Google SEO -->
   <script type="application/ld+json">
