--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Pedrem</title>
+  <title>Pedrem – Site Oficial</title>
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="lsMLunpggY2OEyspde_I8HGlb3Dl-5ASKKxWs99ehK4" />
@@ -12,8 +14,8 @@
     "@type": ["Person", "MusicGroup"],
     "name": "Pedro Henrique Cordeiro Pavão",
     "alternateName": "Pedrem",
-    "description": "Pedro Henrique Cordeiro Pavão (São Miguel, Açores, 8 de agosto de 1996), conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
-    "image": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_tC3P2QgCyt0ptpcWHGEP_ZQieNCkD2Tr9YztOeQOpQI9V9OdPcCvkWcZLGcUGe9I8M8KlJZ0ePVUkNyLh0nVURor1jVeaPYcCSZdUDAYXvOryXHC6gigrw8T2amB8KbMOdV_dXgYxG3GECh81jOoUFkAnyf-JAwsspAu-HBX3raTEYiQUF5aaXF4Pw/w400-h394/Pedrem-artista-musical-a%C3%A7ores%208.png",
+    "description": "Pedro Henrique Cordeiro Pavão, conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
+    "image": "https://lh3.googleusercontent.com/sitesv/AICyYdZZfl0w8ZwrgUH4QsBh_ASVmrvPPsVoSvEuHHweqd5ykyux-lkJP7FpPWiZ_9JBZePPDw_7deVHyGUnWFzap0JnpRVJYFTFVLx6edZA0lhbMH_tVpPZw8TvZjWhTxAC3cgWNaGi8xXTx4EPFpSFI4pRnz4mPTf2tejL7E4KToyg8WYOxBB90CZrAWRnhfDtPj8FIcGYFAs13uZezt48CFSr66EDnh7161XOl6A=w1280",
     "birthDate": "1996-08-08",
     "birthPlace": { "@type": "Place", "name": "São Miguel, Açores, Portugal" },
     "jobTitle": "Artista musical",
@@ -38,4 +40,89 @@
     "mainEntityOfPage": "https://sites.google.com/view/pedrem"
   }
   </script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #1c1c1c;
+      color: white;
+      padding: 40px 20px;
+    }
+    header img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 20px;
+      border: 4px solid #fff;
+    }
+    header h1 {
+      margin: 10px 0 5px 0;
+      font-size: 2em;
+    }
+    header p {
+      font-size: 1.2em;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    main {
+      padding: 40px 20px;
+    }
+    .links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .links a {
+      text-decoration: none;
+      color: white;
+      background: #1c1c1c;
+      padding: 12px 25px;
+      border-radius: 50px;
+      font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
+    }
+    .links a:hover {
+      background: #ff004f;
+      transform: translateY(-3px);
+    }
+  </style>
 </head>
+<body>
+  <header>
+    <img src="https://lh3.googleusercontent.com/sitesv/AICyYdZZfl0w8ZwrgUH4QsBh_ASVmrvPPsVoSvEuHHweqd5ykyux-lkJP7FpPWiZ_9JBZePPDw_7deVHyGUnWFzap0JnpRVJYFTFVLx6edZA0lhbMH_tVpPZw8TvZjWhTxAC3cgWNaGi8xXTx4EPFpSFI4pRnz4mPTf2tejL7E4KToyg8WYOxBB90CZrAWRnhfDtPj8FIcGYFAs13uZezt48CFSr66EDnh7161XOl6A=w1280" alt="Pedrem">
+    <h1>Pedrem</h1>
+    <p>Cantor, compositor e produtor musical português. Descobre todas as minhas redes sociais e plataformas abaixo!</p>
+  </header>
+
+  <main>
+    <div class="links">
+      <a href="https://sites.google.com/view/pedrem" target="_blank">Site Oficial</a>
+      <a href="https://www.instagram.com/xpedremx" target="_blank">Instagram</a>
+      <a href="https://www.tiktok.com/@pedrem" target="_blank">TikTok</a>
+      <a href="https://www.youtube.com/@pedremmusic" target="_blank">YouTube</a>
+      <a href="https://www.facebook.com/djpedrem" target="_blank">Facebook</a>
+      <a href="https://x.com/xpedremx" target="_blank">X</a>
+      <a href="https://open.spotify.com/intl-pt/artist/7iHL44rn4M9576JKqSBldB" target="_blank">Spotify</a>
+      <a href="https://music.apple.com/pt/artist/pedrem/1500315628" target="_blank">Apple Music</a>
+      <a href="https://www.deezer.com/pt/artist/12754911" target="_blank">Deezer</a>
+      <a href="https://www.shazam.com/artist/pedrem/1500315628" target="_blank">Shazam</a>
+      <a href="https://www.cifraclub.com.br/pedrem/" target="_blank">Cifra Club</a>
+      <a href="https://genius.com/artists/Pedrem" target="_blank">Genius</a>
+      <a href="https://www.letras.com/pedrem/" target="_blank">Letras</a>
+      <a href="https://www.flickr.com/people/pedrem/" target="_blank">Flickr</a>
+      <a href="https://www.imdb.com/name/nm14289853/" target="_blank">IMDB</a>
+      <a href="https://www.linkedin.com/in/xpedremx" target="_blank">LinkedIn</a>
+    </div>
+  </main>
+</body>
+</html>
