--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     "name": "Pedro Henrique Cordeiro Pavão",
     "alternateName": "Pedrem",
     "description": "Pedro Henrique Cordeiro Pavão, conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
-    "image": "https://lh3.googleusercontent.com/sitesv/AICyYdZZfl0w8ZwrgUH4QsBh_ASVmrvPPsVoSvEuHHweqd5ykyux-lkJP7FpPWiZ_9JBZePPDw_7deVHyGUnWFzap0JnpRVJYFTFVLx6edZA0lhbMH_tVpPZw8TvZjWhTxAC3cgWNaGi8xXTx4EPFpSFI4pRnz4mPTf2tejL7E4KToyg8WYOxBB90CZrAWRnhfDtPj8FIcGYFAs13uZezt48CFSr66EDnh7161XOl6A=w1280",
+    "image": "https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/pedrem-foto-principal.jpg",
     "birthDate": "1996-08-08",
     "birthPlace": { "@type": "Place", "name": "São Miguel, Açores, Portugal" },
     "jobTitle": "Artista musical",
@@ -80,7 +80,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
+      margin-bottom: 40px;
     }
     .links a {
       text-decoration: none;
@@ -95,11 +95,26 @@
       background: #ff004f;
       transform: translateY(-3px);
     }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
+    }
+    .gallery img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 10px;
+      transition: transform 0.3s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://lh3.googleusercontent.com/sitesv/AICyYdZZfl0w8ZwrgUH4QsBh_ASVmrvPPsVoSvEuHHweqd5ykyux-lkJP7FpPWiZ_9JBZePPDw_7deVHyGUnWFzap0JnpRVJYFTFVLx6edZA0lhbMH_tVpPZw8TvZjWhTxAC3cgWNaGi8xXTx4EPFpSFI4pRnz4mPTf2tejL7E4KToyg8WYOxBB90CZrAWRnhfDtPj8FIcGYFAs13uZezt48CFSr66EDnh7161XOl6A=w1280" alt="Pedrem">
+    <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/pedrem-foto-principal.jpg" alt="Pedrem">
     <h1>Pedrem</h1>
     <p>Cantor, compositor e produtor musical português. Descobre todas as minhas redes sociais e plataformas abaixo!</p>
   </header>
@@ -122,6 +137,33 @@
       <a href="https://www.flickr.com/people/pedrem/" target="_blank">Flickr</a>
       <a href="https://www.imdb.com/name/nm14289853/" target="_blank">IMDB</a>
       <a href="https://www.linkedin.com/in/xpedremx" target="_blank">LinkedIn</a>
+    </div>
+
+    <div class="gallery">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto1.jpg" alt="Pedrem 1">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto2.jpg" alt="Pedrem 2">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto3.jpg" alt="Pedrem 3">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto4.jpg" alt="Pedrem 4">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto5.jpg" alt="Pedrem 5">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto6.jpg" alt="Pedrem 6">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto7.jpg" alt="Pedrem 7">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto8.jpg" alt="Pedrem 8">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto9.jpg" alt="Pedrem 9">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto10.jpg" alt="Pedrem 10">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto11.jpg" alt="Pedrem 11">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto12.jpg" alt="Pedrem 12">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto13.jpg" alt="Pedrem 13">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto14.jpg" alt="Pedrem 14">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto15.jpg" alt="Pedrem 15">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto16.jpg" alt="Pedrem 16">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto17.jpg" alt="Pedrem 17">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto18.jpg" alt="Pedrem 18">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto19.jpg" alt="Pedrem 19">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto20.jpg" alt="Pedrem 20">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto21.jpg" alt="Pedrem 21">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto22.jpg" alt="Pedrem 22">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto23.jpg" alt="Pedrem 23">
+      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/fotos/foto24.jpg" alt="Pedrem 24">
     </div>
   </main>
 </body>
