--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     "name": "Pedro Henrique Cordeiro Pavão",
     "alternateName": "Pedrem",
     "description": "Pedro Henrique Cordeiro Pavão, conhecido publicamente como Pedrem, é cantor, produtor musical e compositor português.",
-    "image": "https://github.com/djpedrem-dev/pedrem-json/raw/main/foto1.jpg",
+    "image": "https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores.png",
     "birthDate": "1996-08-08",
     "birthPlace": { "@type": "Place", "name": "São Miguel, Açores, Portugal" },
     "jobTitle": "Artista musical",
@@ -114,7 +114,7 @@
 </head>
 <body>
   <header>
-    <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto1.jpg" alt="Pedrem">
+    <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores.png" alt="Pedrem">
     <h1>Pedrem</h1>
     <p>Cantor, compositor e produtor musical português. Descobre todas as minhas redes sociais e plataformas abaixo!</p>
   </header>
@@ -140,31 +140,31 @@
     </div>
 
     <div class="gallery">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto1.jpg" alt="Pedrem 1">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto2.jpg" alt="Pedrem 2">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto3.jpg" alt="Pedrem 3">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto4.jpg" alt="Pedrem 4">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto5.jpg" alt="Pedrem 5">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto6.jpg" alt="Pedrem 6">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto7.jpg" alt="Pedrem 7">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto8.jpg" alt="Pedrem 8">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto9.jpg" alt="Pedrem 9">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto10.jpg" alt="Pedrem 10">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto11.jpg" alt="Pedrem 11">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto12.jpg" alt="Pedrem 12">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto13.jpg" alt="Pedrem 13">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto14.jpg" alt="Pedrem 14">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto15.jpg" alt="Pedrem 15">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto16.jpg" alt="Pedrem 16">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto17.jpg" alt="Pedrem 17">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto18.jpg" alt="Pedrem 18">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto19.jpg" alt="Pedrem 19">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto20.jpg" alt="Pedrem 20">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto21.jpg" alt="Pedrem 21">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto22.jpg" alt="Pedrem 22">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto23.jpg" alt="Pedrem 23">
-      <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/foto24.jpg" alt="Pedrem 24">
-    </div>
-  </main>
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores.png" alt="Pedrem 1">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%202.png" alt="Pedrem 2">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%203.png" alt="Pedrem 3">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%204.png" alt="Pedrem 4">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%205.png" alt="Pedrem 5">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%206.png" alt="Pedrem 6">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%207.png" alt="Pedrem 7">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%208.png" alt="Pedrem 8">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%209.png" alt="Pedrem 9">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2010.png" alt="Pedrem 10">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2011.png" alt="Pedrem 11">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2012.png" alt="Pedrem 12">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2013.png" alt="Pedrem 13">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2014.png" alt="Pedrem 14">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2015.png" alt="Pedrem 15">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2016.png" alt="Pedrem 16">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2017.png" alt="Pedrem 17">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2018.png" alt="Pedrem 18">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2019.png" alt="Pedrem 19">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2020.png" alt="Pedrem 20">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2021.jpg" alt="Pedrem 21">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2022.jpg" alt="Pedrem 22">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2023.png" alt="Pedrem 23">
+  <img src="https://github.com/djpedrem-dev/pedrem-json/raw/main/Pedrem-artista-musical-açores%2024.png" alt="Pedrem 24">
+</div>
+ </main>
 </body>
 </html>
